<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_color"
    android:orientation="vertical" >

    <RelativeLayout style="@style/titlebar" >

        <TextView
            android:id="@+id/login_titlebar_title"
            style="@style/titlebar_title"
            android:text="@string/login_title" />
    </RelativeLayout>

    <EditText
        android:id="@+id/login_account_edt"
        style="@style/input_box"
        android:layout_marginTop="@dimen/content_top_margin"
        android:hint="@string/login_account_input_hint" />

    <EditText
        android:id="@+id/login_pw_edt"
        style="@style/input_box"
        android:layout_marginTop="@dimen/content_border_margin"
        android:hint="@string/login_pw_input_hint"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/content_border_margin"
        android:layout_marginRight="@dimen/content_border_margin"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/common_btn_height"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_bg"
            android:text="@string/login_login_btn_text"
            android:textColor="@drawable/btn_text_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/login_reset_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/common_btn_height"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_bg"
            android:text="@string/login_reset_btn_text"
            android:textColor="@drawable/btn_text_color"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>