<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:text="@string/dialogExit_title"
        android:textColor="#5698f7"
        android:textSize="22sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="8dp"
        android:background="#177EFA"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingBottom="10dp"
        android:paddingLeft="8dp"
        android:paddingTop="10dp"
        android:text="@string/dialogExit_tip"
        android:textColor="#6c6c6c"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="#cccccc"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialogExit_confirm_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_dialog_btn_bg"
            android:gravity="center"
            android:text="@string/dialogExit_confirm"
            android:textColor="@drawable/btn_text_color"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#cccccc"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/dialogExit_cancle_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_dialog_btn_bg"
            android:gravity="center"
            android:text="@string/dialogExit_cancle"
            android:textColor="@drawable/btn_text_color"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>