<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_color"
    android:orientation="vertical" >

    <RelativeLayout style="@style/titlebar" >

        <TextView
            android:id="@+id/ucUserInfo_titlebar_title"
            style="@style/titlebar_title"
            android:text="@string/userInfo_title" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/content_border_margin"
        android:layout_marginRight="@dimen/content_border_margin"
        android:layout_marginTop="@dimen/content_top_margin"
        android:background="@drawable/list_item_top_bg_0"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_label"
            android:textColor="@color/common_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ucUserInfo_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5698f7"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/content_border_margin"
        android:layout_marginRight="@dimen/content_border_margin"
        android:layout_marginTop="2dp"
        android:background="@drawable/list_item_bg_0"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_status_label"
            android:textColor="@color/common_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ucUserInfo_user_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5698f7"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/content_border_margin"
        android:layout_marginRight="@dimen/content_border_margin"
        android:layout_marginTop="2dp"
        android:background="@drawable/list_item_bg_0"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_type_label"
            android:textColor="@color/common_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ucUserInfo_user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5698f7"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/content_border_margin"
        android:layout_marginRight="@dimen/content_border_margin"
        android:layout_marginTop="2dp"
        android:background="@drawable/list_item_bg_0"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_dept_label"
            android:textColor="@color/common_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ucUserInfo_user_dept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5698f7"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/content_border_margin"
        android:layout_marginRight="@dimen/content_border_margin"
        android:layout_marginTop="2dp"
        android:background="@drawable/list_item_bottom_bg_0"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_balance_label"
            android:textColor="@color/common_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ucUserInfo_user_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5698f7"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>